--- a/src/components/container/App.css
+++ b/src/components/container/App.css
@@ -1,7 +1,25 @@
 .App {
   text-align: center;
+  
 }
-
+.center {
+  display: flex;
+  justify-content: center;
+}
+.column {
+  display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-flow: column;
+}
+.space-between {
+  display: flex;
+  justify-content: space-around;
+}
+.left {
+  display: flex;
+  justify-content: flex-start;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
